--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,8 +1,8 @@
 FROM python:3.10-slim
 
+COPY requirements.txt .
+COPY main.py .
 
-# ###
-#
-# 다음 주석을 지우고 docker 파일을 완성하자.
-#
-# ###
+RUN pip install -r requirements.txt
+
+CMD ["fastapi", "run", "main.py"]
